--- a/build.gradle
+++ b/build.gradle
@@ -119,6 +119,9 @@ dependencies {
     include 'org.spongepowered:mixin:0.8.2'
     annotationProcessor 'org.spongepowered:mixin:0.8.4:processor'
 
+    // Discord RPC
+    include 'com.github.cbyrneee:DiscordIPC:e18542f6'
+
     // Real mod deobf dependency examples - these get remapped to your current mappings
     // compileOnly fg.deobf("mezz.jei:jei-${mc_version}:${jei_version}:api") // Adds JEI API as a compile dependency
     // runtimeOnly fg.deobf("mezz.jei:jei-${mc_version}:${jei_version}") // Adds the full JEI mod as a runtime dependency
